# jobctl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.playwright-mcp/: page-2026-06-04T17-56-21-293Z.yml  page-2026-06-04T17-56-27-977Z.yml  page-2026-06-04T18-08-48-287Z.yml  page-2026-06-04T18-22-50-706Z.yml  page-2026-06-04T18-23-13-871Z.yml  page-2026-06-04T18-25-49-540Z.yml
jobctl/: __init__.py  config.py  gc.py  jobfile.py  logsetup.py  report.py
jobctl/analysis/: base.py  deepseek.py  gemini.py  offline.py
jobctl/api/: client.py  server.py
jobctl/artifacts/: indexer.py
jobctl/backends/: base.py  local.py  slurm.py  ssh.py
jobctl/cli/: main.py
jobctl/db/: models.py  store.py
jobctl/expectations/: contracts.py  distiller.py
jobctl/memory/: mem_auto.py  memory.py
jobctl/monitor/: monitor.py  prober.py
jobctl/notify/: macos.py  notify.py
jobctl/ui/static/: app.css  (+1 more)
tests/: conftest.py  test_cli_entrypoint.py  test_cli_exit_codes.py  test_cli_path_resolution.py  test_e2e_local.py  test_feature_wiring.py  test_gc.py  test_gemini.py  test_logsetup.py  test_macos_notify.py  test_mem_auto.py  test_prober.py  test_report.py  test_run_identity.py  test_slurm_directives.py  test_smoke.py  test_task10_cli.py  test_task11_ui.py  test_task1_foundation.py  test_task2_analysis.py  test_task3_expectations.py  test_task4_artifacts.py  test_task5_memory.py  test_task6_notify.py  test_task7_backends.py  test_task8_monitor.py  test_task9_api.py  test_wiring_fixes.py
tests/fakebin/: sacct  sbatch  scancel  squeue
tests/fixtures/: cluster_smoke.jobfile.yaml
(+12 files in other folders)
