[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "jinja2",
    "pillow",
    "pyyaml",
    "openai",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
jobctl = "jobctl.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cluster: marks tests as requiring a real cluster (skipped by default)",
]
